Fix layout issues resulting from MDC migration

--- a/src/app/components/deployment-list/deployment-list.component.css
+++ b/src/app/components/deployment-list/deployment-list.component.css
@@ -21,7 +21,7 @@
 }
 
 mat-row,
-td.mat-cell {
+td.mat-mdc-cell {
   cursor: pointer;
 }
 
@@ -36,15 +36,15 @@ td.mat-cell {
   overflow: auto;
 }
 
-.mat-elevation-z4 td.mat-cell:first-of-type {
+.mat-elevation-z4 td.mat-mdc-cell:first-of-type {
   padding-left: 8px;
 }
-.mat-elevation-z4 th.mat-header-cell:first-of-type {
+.mat-elevation-z4 th.mat-mdc-header-cell:first-of-type {
   padding-left: 16px;
 }
 
-.mat-elevation-z4 td.mat-cell:last-of-type,
-.mat-elevation-z4 th.mat-header-cell:last-of-type {
+.mat-elevation-z4 td.mat-mdc-cell:last-of-type,
+.mat-elevation-z4 th.mat-mdc-header-cell:last-of-type {
   padding-right: 16px;
 }
 
